--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 My Personal Introduction
 <style>
 body {
-background-color: 517E3C;
+        background-color: #a5e2f5;
 } 
 h1 {
-color: FDEFBF;
+    color: #a5bf4c;
 }
 p {
-color: 942019;
+color: #fc5947;
 }
 </style>
 </title>
