--- a/index.html
+++ b/index.html
@@ -5,14 +5,7 @@
 My Personal Introduction
 <style>
 body {
-        background-color: #a5e2f5;
-} 
-h1 {
-    color: #a5bf4c;
-}
-p {
-color: #fc5947;
-}
+background-color: rgba(0, 0, 255, 0.623);   }
 </style>
 </title>
 </head>
