--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 My Personal Introduction
 <style>
 body {
-background-color: rgba(0, 0, 255, 0.623);   }
+background-color: rgba(0, 0, 255, 0.623);   
+    }
 </style>
 </title>
 </head>
