--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <title>
 My Personal Introduction
 <style>
-body {
 background-color: rgba(0, 0, 255, 0.623);   
-    }
+body {background-color: chocolate;} 
 </style>
 </title>
 </head>
