--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>
-    My Personal Introduction
+<title>My Personal Introduction
 </title>
 <style>
     body {background-color: rgb(0, 128, 75);
