--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@ color: #266b6d;
 </style>
 </head>
 <body><h1>Whats going on party people, my name is Matt from Long Island</h1>
+<p>
+    I love to support Liverpool.
+    they are my favorite football club.
+    I have 2 dogs and a cat that are awsome.
+    I hate Video assistance referee or VAR. It ruined the beautiful game.
+</p>
 </body>
 </html>
