--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ color: #6d2626;
 <p>
     I love to support Liverpool.
     they are my favorite football club.
-    I have 2 dogs and a cat that are awsome.
-    I hate Video assistance referee or VAR. It ruined the beautiful game.
+    I have 2 dogs and a cat that are awesome.
+    I hate Video assistance referee or better known as VAR. It ruined the beautiful game.
 </p>
 </body>
 </html>
