--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@ color: #6d2626;
 </head>
 <body><h1>Whats going on party people, my name is Matt from Long Island</h1>
 <p>
-    I love to support Liverpool.
-    they are my favorite football club.
+    I love to support Liverpool they are my favorite football club.
     I have 2 dogs and a cat that are awesome.
     I hate Video assistance referee or better known as VAR. It ruined the beautiful game.
 </p>
