--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@ color: #6d2626;
 </head>
 <body><h1>Whats going on party people, my name is Matt from Long Island</h1>
 <p>
-    I love to support Liverpool they are my favorite football club.
+    I love to support Liverpool they are my favorite football club.<br>
     I love my three animals very much.<br>
-    I enjoy spending time with my family and playing handball.
+    I enjoy spending time with my family and playing handball.<br>
+    I moved to Raleigh from Long Island New York and am very happy here.
 </p>
 </body>
 </html>
