--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>My Personal Introduction
 </title>
 <style>
-    body {background-color: rgb(248, 234, 33);
+    body {background-color: #f0cd4d;
     }
 
 
